<resources>
    <string name="app_name">MyTracker</string>

    <string name="stats_distance">VZDIALENOSŤ</string>
    <string name="stats_timetotal">CELKOVÝ ČAS</string>
    <string name="stats_movetime">ČAS POHYBU</string>
    <string name="stats_avgspeed">PRIEM.RÝCHLOSŤ</string>
    <string name="stats_maxspeed">MAX.RÝCHLOSŤ</string>
    <string name="stats_maxalt">MAX.PREVÝŠENIE</string>
    <string name="gps_disabled">GPS nie je povolené. Povoliť?</string>
    <string name="btn_yes">Áno</string>
    <string name="btn_no">Nie</string>
    <string name="rec_pause">Nahrávanie pozastavené.</string>
    <string name="rec_inprg">Nahrávam..</string>
    <string name="MyTracker">M Permissions</string>
    <string name="action_settings">Settings</string>
    <string name="single_permission_text">(Click on FAB to check Single permission.\nTo test again, change the app permission in settings or reinstall the app)</string>

    <string name="comm_srv_url">http://88.212.55.25:8181/MyLogger/MobileServlet</string>
</resources>
